k8s-prod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  tls:
  - hosts:
    - cloud.annotations.ai
    secretName: annotations-secret
  rules:
  - host: cloud.annotations.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 443
      - path: /docs
        backend:
          serviceName: docs
          servicePort: 80
      - path: /workshops
        backend:
          serviceName: docs
          servicePort: 80
      - path: /demos
        backend:
          serviceName: docs
          servicePort: 80
      - path: /sdks
        backend:
          serviceName: docs
          servicePort: 80
      - path: /docs-assets
        backend:
          serviceName: docs
          servicePort: 80
